# hotplot

./: Cargo.toml
examples/: coingecko.rs  first.rs
src/: lib.rs  math.rs
src/chart/: line.rs
src/chart/line/: data.rs
